# tlenix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_init.sh  deny.toml  kernel_build.sh  mk-release-bins  tlenix.sh  tlenix_setup.sh  usb-install  vm-run  x86_64-unknown-linux-none.json
.cargo/: config.toml
.github/workflows/: ci.yml
config/: grub.cfg
init/: .clangd  init.c  start.S
kernel/: .config
os_files/etc/: environment  initlogo
src/: allocator.rs  args.rs  console.rs  consts.rs  data.rs  fs.rs  io.rs  ipc.rs  lib.rs  memory.rs  nix_bytes.rs  nix_str.rs  print.rs  process.rs  streams.rs  syscall.rs  syscalls.rs  system.rs  term.rs  test_framework.rs  test_utils.rs  thread.rs  tlalloc.rs
src/fs/: dirs.rs  file.rs  mode_t.rs  mount.rs  open_flags.rs  open_options.rs  permissions.rs  tests.rs  types.rs
src/fs/types/: dir_ents.rs  file_descriptor.rs  file_stats.rs  file_type.rs  lseekwhence.rs  rename_flags.rs
src/init/: main.rs
src/io/: tests.rs
src/nix_bytes/: tests.rs
src/nix_str/: tests.rs
src/print/: tests.rs
src/process/: types.rs
src/syscall/: errno.rs  types.rs
src/syscalls/: errno.rs  nums.rs
src/term/: termios.rs
test_files/: large_file.txt  test.txt
