[package]
name = "tlenix"
version = "0.1.0-beta.1"
authors = ["Max Gilmour <mgilmour@maxgmr.ca>"]
edition = "2024"
description = "Custom OS built upon the Linux kernel"
readme = "README.md"
homepage = "https://github.com/maxgmr/tlenix"
repository = "https://github.com/maxgmr/tlenix"
license = "GPL-3.0"
keywords = ["os"]
categories = []
exclude = []
include = []
default-run = "init"

[lib]
name = "tlenix_core"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
bitflags = "2.1"
getargs = { version = "0.5", default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
num_enum = { version = ">=0.4, <=0.7", default-features = false }
spin = "0.10.0"
talc = "4.4.2"
